name:                truthiness
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/truthiness#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2022 Willem Van Onsem
category:            web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.Truth
    , Data.Truth.Class
    , Data.Truth.Prelude
    , Data.Truth.Template
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite             falsified
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  other-modules:
      Data.Truth.ClassSpec
  build-depends:
      base
    , truthiness
    , hspec ==2.*
    , parsec >=3.0
    , QuickCheck >=2.1
  build-tool-depends:
      hspec-discover:hspec-discover == 2.*
  default-language:    Haskell2010
  default-extensions:
  ghc-options:       -Wall -Wcompat -Wcompat
                     -Wincomplete-record-updates
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/hapytex/truthiness
